Enhance service worker functionality by adding update handling and caching logic for HTML files. Update index.html to register service worker with update checks, improving PWA capabilities.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -30,10 +30,22 @@
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', () => {
           navigator.serviceWorker.register('/sw.js', {
-            scope: '/'
+            scope: '/',
+            updateViaCache: 'none'
           })
           .then(registration => {
             console.log('SW registered: ', registration);
+            
+            // Check for updates
+            registration.addEventListener('updatefound', () => {
+              const newWorker = registration.installing;
+              newWorker.addEventListener('statechange', () => {
+                if (newWorker.state === 'installed' && navigator.serviceWorker.controller) {
+                  // New service worker available
+                  console.log('New service worker available');
+                }
+              });
+            });
           })
           .catch(registrationError => {
             console.log('SW registration failed: ', registrationError);
