--- a/frontend/index.html
+++ b/frontend/index.html
@@ -26,7 +26,7 @@
     <script type="module" src="/src/main.tsx"></script>
     
     <!-- Service Worker Registration -->
-    <script>
+    <script type="module">
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', () => {
           navigator.serviceWorker.register('/sw.js', {
