--- a/frontend/index.html
+++ b/frontend/index.html
@@ -23,10 +23,10 @@
   </head>
   <body>
     <div id="root"></div>
-    <script src="/src/main.tsx"></script>
+    <script type="module" src="/src/main.tsx"></script>
     
     <!-- Service Worker Registration -->
-    <script type="module">
+    <script>
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', () => {
           navigator.serviceWorker.register('/sw.js', {
