--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,7 +11,7 @@
     <link rel="manifest" href="/manifest.json" />
     
     <!-- Apple Touch Icons -->
-    <link rel="apple-touch-icon" href="/passport.svg" />
+    <link rel="apple-touch-icon" href="/vizy.svg" />
     
     <!-- iOS Meta Tags - Updated -->
     <meta name="mobile-web-app-capable" content="yes" />
