Update manifest.json to replace SVG icons with PNG format for improved compatibility and performance

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vizy.svg" />
+    <link rel="icon" type="image/png" href="/vizy.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Vizy - Your visa and travel companion app" />
@@ -11,7 +11,7 @@
     <link rel="manifest" href="/manifest.json" />
     
     <!-- Apple Touch Icons -->
-    <link rel="apple-touch-icon" href="/vizy.svg" />
+    <link rel="apple-touch-icon" href="/vizy.png" />
     
     <!-- iOS Meta Tags - Updated -->
     <meta name="mobile-web-app-capable" content="yes" />
